# notty

./: .gitignore  Cargo.toml  README.md  build.py  denote-notty.el  denote-weibian.el
.notty/: config.toml
.wb/: config.toml
_template/: html-toolkit.typ  site.typ  template-html.typ  template-paged.typ  template.html  template.typ  transclusion-html.typ  transclusion-paged.typ
docs/: 20250619T223048.html  20250811T194935.html  20250817T222638.html  20250819T220636.html  20250819T220701.html  20250819T220749.html  20250819T220803.html  20250819T220812.html  20250819T220820.html  20250819T221255.html  20250819T221329.html  20250819T221344.html  index.html
html/: 20250426T224704.html  20250427T005825.html  20250427T005835.html  20250531T191417.html  20250619T223048.html  20250811T194935.html  20250817T222638.html  20250819T220636.html  20250819T220701.html  20250819T220749.html  20250819T220803.html  20250819T220812.html  20250819T220820.html  20250819T221255.html  20250819T221329.html  20250819T221344.html  index.html
src/: args.rs  backend.rs  compile.rs  compiler.rs  config.rs  error.rs  frontend.rs  html.rs  main.rs  terminal.rs
typ/: 20250619T223048==Software--notty.typ  20250811T194935--definition-notes-are-anchors-for-thoughts.typ  20250817T222638--design-thoughts-of-notty.typ  20250817T222638--design-thoughts-of-weibian.typ  20250819T220636--typst-finds-a-sweet-spot-for-taking-scientific-notes.typ  20250819T220701--alternative-choices-for-scientific-notes.typ  20250819T220749--taking-scientific-notes-need-modular-reusable-snippets-for-mathematics.typ  20250819T220803--taking-scientific-notes-needs-full-power-mathematical-typesetting.typ  20250819T220812--markdown-is-not-suitable-for-scientific-content-producing.typ  20250819T220820--pure-latex-is-not-suitable-for-scientific-content-producing.typ  20250819T221329--writing-in-notty.typ  (+18 more)
(+38 files in other folders)
