[package]
name = "notty"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
codespan-reporting = "0.13.1"
color-print = "0.3.7"
ecow = "0.2.5"
ego-tree = "0.6.2"
figment = { version = "0.10.8", features = ["toml"] }
pathdiff = "0.2.3"
scraper = "0.19.1"
serde = { version = "1.0.210", features = ["derive"] }
termcolor = "1.4.1"

[dev-dependencies]
serde_json = "1.0.132"
